[gd_scene load_steps=40 format=2]

[ext_resource path="res://Level2/FanticyForest/Houses/GogginsIndoors.png" type="Texture" id=1]
[ext_resource path="res://Level2/FanticyForest/Houses/EnterDoor.gd" type="Script" id=2]
[ext_resource path="res://Collectables/KeyCollectobles/KeyCollectable.gd" type="Script" id=3]
[ext_resource path="res://Level2/FanticyForest/Houses/basment.tres" type="TileSet" id=4]
[ext_resource path="res://Obsticals/Climbables/Vines/Vine.gd" type="Script" id=5]
[ext_resource path="res://Level2/FanticyForest/Houses/GogginsDoor/Dooropen2.png" type="Texture" id=6]
[ext_resource path="res://Level2/FanticyForest/Houses/GogginsDoor/Dooropen3.png" type="Texture" id=7]
[ext_resource path="res://Level2/FanticyForest/Houses/GogginsDoor/Dooropen1.png" type="Texture" id=8]
[ext_resource path="res://Level2/FanticyForest/Houses/GogginsDoor/Dooropen4.png" type="Texture" id=9]
[ext_resource path="res://Characters/Enimes/miniBosses/GiantPlantMonster.tscn" type="PackedScene" id=10]
[ext_resource path="res://Collectables/KeyCollectobles/Shovel/ShovelItem1.png" type="Texture" id=11]
[ext_resource path="res://Collectables/KeyCollectobles/Shovel/ShovelItem2.png" type="Texture" id=12]
[ext_resource path="res://Collectables/KeyCollectobles/Shovel/ShovelItem3.png" type="Texture" id=13]
[ext_resource path="res://Collectables/KeyCollectobles/Shovel/ShovelItem4.png" type="Texture" id=14]
[ext_resource path="res://Collectables/KeyCollectobles/Shovel/ShovelItem5.png" type="Texture" id=15]
[ext_resource path="res://Collectables/KeyCollectobles/Shovel/ShovelItem6.png" type="Texture" id=16]
[ext_resource path="res://Collectables/KeyCollectobles/Shovel/ShovelItem7.png" type="Texture" id=17]
[ext_resource path="res://Collectables/KeyCollectobles/Shovel/ShovelItem8.png" type="Texture" id=18]
[ext_resource path="res://Obsticals/ThowablePlants/SeedThroughn/VineSeed.tscn" type="PackedScene" id=19]
[ext_resource path="res://Obsticals/BreakebleBlocks/DestroyableBlock.tscn" type="PackedScene" id=20]
[ext_resource path="res://Level2/FanticyForest/Houses/basment.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 118, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 146, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 38.6321 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11, 55 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11, 197 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=9]
0/name = "basment.png 0"
0/texture = ExtResource( 21 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 64, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 8 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "basment.png 1"
1/texture = ExtResource( 21 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 20, 8 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 12, 6 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 18 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": false,
"name": "DoorOpen",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 8, 42 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 8, 42 )

[sub_resource type="CircleShape2D" id=16]
radius = 9.0

[sub_resource type="Animation" id=17]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="GogginsIndoors" type="Sprite"]
position = Vector2( -2394, -132 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_left = -0.167
anchor_top = -0.119
anchor_right = 1.236
anchor_bottom = 1.17
margin_left = -282.365
margin_top = -186.557
margin_right = -180.58
margin_bottom = 267.51
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -26, -16 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 232, -16 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 10, -94 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -166, 64 )
shape = SubResource( 3 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 68, 64 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -112, -56 )
shape = SubResource( 5 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -139, 121 )
shape = SubResource( 6 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 123, 121 )
shape = SubResource( 6 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 276, 183 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 143.458, -54 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 204, 24 )
shape = SubResource( 5 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -116, 24 )
shape = SubResource( 5 )

[node name="Backround" type="TileMap" parent="StaticBody2D"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 393212, 2, 0, 393213, 2, 0, 393214, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 458748, 2, 0, 458749, 2, 0, 458750, 2, 0, 458751, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 524283, 2, 0, 524284, 2, 0, 524285, 2, 0, 524286, 2, 0, 524287, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 589819, 2, 0, 589820, 2, 0, 589821, 2, 0, 589822, 2, 0, 589823, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 655356, 2, 0, 655357, 2, 0, 655358, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0 )

[node name="walls" type="TileMap" parent="StaticBody2D"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 393211, 0, 0, 393212, 3, 0, 327686, 536870912, 0, 458747, 0, 0, 393222, 536870912, 0, 524283, 0, 0, 458758, 536870912, 0, 589819, 0, 0, 524294, 536870912, 0, 655355, 0, 0, 655356, 5, 0, 589830, 536870912, 0, 720891, 4, 0, 720892, 1, 0, 720893, 1, 0, 720894, 1, 0, 720895, 1, 0, 655361, 1, 0, 655365, 1, 0, 655366, 536870916, 0 )

[node name="DigableGround" type="TileMap" parent="StaticBody2D" groups=[
"Diggable",
]]
tile_set = SubResource( 9 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 589824, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 655360, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0 )

[node name="FallThough" type="StaticBody2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D8" type="CollisionShape2D" parent="FallThough"]
position = Vector2( -44, 50 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D9" type="CollisionShape2D" parent="FallThough"]
position = Vector2( 47, 50 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="FallThough"]
position = Vector2( -92, 66 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D11" type="CollisionShape2D" parent="FallThough"]
position = Vector2( 102, -16 )
shape = SubResource( 11 )
one_way_collision = true

[node name="CollisionShape2D12" type="CollisionShape2D" parent="FallThough"]
position = Vector2( 102, -16 )
rotation = 3.14159
shape = SubResource( 11 )
one_way_collision = true

[node name="Door" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
NewPoint = Vector2( -1264, -1312 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( 0, 44 )
shape = SubResource( 12 )

[node name="DoorSprite" type="AnimatedSprite" parent="Door"]
position = Vector2( 2, 39 )
frames = SubResource( 13 )
animation = "DoorOpen"

[node name="Vine" type="Area2D" parent="."]
position = Vector2( 104, 16 )
script = ExtResource( 5 )
LadderType = 2
Hastop = true

[node name="HitBox" type="CollisionShape2D" parent="Vine"]
shape = SubResource( 14 )

[node name="Vine2" type="Area2D" parent="."]
position = Vector2( -90, 96 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
LadderType = 2
Hastop = true

[node name="HitBox" type="CollisionShape2D" parent="Vine2"]
shape = SubResource( 15 )

[node name="GiantPlantMonster" parent="." instance=ExtResource( 10 )]
position = Vector2( -81, 321 )

[node name="ItemPickup" type="Area2D" parent="GiantPlantMonster"]
position = Vector2( 195, -19 )
script = ExtResource( 3 )
ItemID = 1
SpawnEnime = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GiantPlantMonster/ItemPickup"]
shape = SubResource( 16 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="GiantPlantMonster/ItemPickup"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GiantPlantMonster/ItemPickup"]
anims/UpandDown = SubResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="GiantPlantMonster/ItemPickup"]
position = Vector2( 0, -1.34321 )
frames = SubResource( 18 )
frame = 6
playing = true

[node name="VineSeed" parent="GiantPlantMonster" instance=ExtResource( 19 )]
visible = false
position = Vector2( -9, 0 )

[node name="DestroyableBlock" parent="." instance=ExtResource( 20 )]
position = Vector2( 0, 42 )
[connection signal="body_entered" from="Door" to="Door" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Door" to="Door" method="_on_Door_body_exited"]
[connection signal="body_entered" from="Vine" to="Vine" method="_on_Vine_body_entered"]
[connection signal="body_exited" from="Vine" to="Vine" method="_on_Vine_body_exited"]
[connection signal="body_entered" from="Vine2" to="Vine2" method="_on_Vine_body_entered"]
[connection signal="body_exited" from="Vine2" to="Vine2" method="_on_Vine_body_exited"]
[connection signal="body_entered" from="GiantPlantMonster/ItemPickup" to="GiantPlantMonster/ItemPickup" method="_on_ItemPickup_body_entered"]
[connection signal="screen_entered" from="GiantPlantMonster/ItemPickup/VisibilityNotifier2D" to="GiantPlantMonster/ItemPickup" method="_on_VisibilityNotifier2D_screen_entered"]
